# kcuckounter

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  readme.md
.github/: renovate.json
.github/workflows/: codeql.yml  html.yml  tests.yml
assets/: readme.md  strategies.json
include/: main_window.hpp  mainwindow.hpp
include/card_helpers/: card_packer.hpp  card_picker.hpp  card_sheet.hpp
include/compat/: config_shim.hpp  i18n_shim.hpp
include/helpers/: base_clock.hpp  card_preview_carousel.hpp  icon_loader.hpp  image_cacher.hpp  infinity_spinbox.hpp  random_generator.hpp  rasterization_runner.hpp  str_label.hpp  strategy_data.hpp  theme_palette.hpp  theme_settings.hpp  time_interface.hpp  widget_helpers.hpp
include/strategy/: strategyinfo.hpp
include/table/: table.hpp  tableslot.hpp
include/widget/: card_widget.hpp  settings_template.hpp  slot_settings.hpp  table.hpp  table_slot.hpp
scripts/: build.sh  check_leaks.sh  cli.sh  format.sh  run.sh  run_mem_stats.sh  test.sh
scripts/android/: build.sh  deps.sh  env.sh  lib.sh  run_device.sh  run_emulator.sh
scripts/ci/: build_sanitizer.sh  build_test.sh  collect_test_report.py  coverage.sh
scripts/lib/: common.sh
src/: main.cpp  main_window.cpp  mainwindow.cpp
src/card_helpers/: card_packer.cpp  card_picker.cpp  card_sheet.cpp
src/compat/: config_shim.cpp
src/helpers/: base_clock.cpp  card_preview_carousel.cpp  icon_loader.cpp  image_cacher.cpp  infinity_spinbox.cpp  random_generator.cpp  rasterization_runner.cpp  strategy_data.cpp  theme_palette.cpp  theme_settings.cpp  time_interface.cpp
src/strategy/: strategyinfo.cpp
src/table/: table.cpp  tableslot.cpp
src/widget/: card_widget.cpp  settings_template.cpp  slot_settings.cpp  table.cpp  table_slot.cpp
src/widgets/: cards.cpp
tests/: card_packer_tests.cpp  card_sheet_tests.cpp  card_widget_tests.cpp  infinity_spinbox_tests.cpp  main_tests.cpp  table_tests.cpp
tests/include/: card_packer_tests.hpp  card_sheet_tests.hpp  card_widget_tests.hpp  infinity_spinbox_tests.hpp  table_tests.hpp
